--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -1,21 +1,24 @@
 name: Build for macOS
 
 on:
+  push:
   workflow_dispatch:
-    branches: master
 
 jobs:
-  build:
+  build-macos:
     strategy:
       matrix:
         # Confusingly, macos-13 is intel and macos-latest is ARM
         os: [macos-13, macos-latest]
+    
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Cache NodeJS modules
         uses: actions/cache@v4
@@ -28,37 +31,20 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Setup Codesigning
-        uses: apple-actions/import-codesign-certs@v3
-        with:
-          p12-file-base64: ${{ secrets.APPLE_CODESIGN_P12 }}
-          p12-password: ${{ secrets.APPLE_CODESIGN_KEY_PASSWORD }}
-
-      - name: Setup AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
       - name: Lint
         run: npm run lint
 
       - name: Build
-        run: SIGN_BUILD=true DEBUG=electron-packager,electron-osx-sign,electron-notarize* npm run build
-        env:
-          APPLE_ID_ASC_PROVIDER: ${{ secrets.APPLE_ID_ASC_PROVIDER }}
-          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
+        run: DEBUG=electron-packager,electron-osx-sign,electron-notarize* npm run build
 
       - name: Rename artifacts
         if: matrix.os == 'macos-latest'
         run: |
           mv app/dist/Mailspring.zip app/dist/Mailspring-AppleSilicon.zip
 
-      - name: Sync artifacts to S3 bucket
-        run: |
-          aws s3 sync app/dist/ "s3://mailspring-builds/client/$(git rev-parse --short HEAD)/osx" \
-            --acl public-read \
-            --exclude "*" --include *.zip
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Mailspring-${{ matrix.os }}
+          path: |
+            app/dist/Mailspring*.zip
