--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,10 @@ on:
   push:
     tags:
       - 'v*.*.*'
+  workflow_run:
+    workflows: ["Build for Linux", "Build for macOS", "Build for Windows"]
+    types:
+      - completed
 
 jobs:
   release:
