--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,10 +14,11 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Download all build artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: ./artifacts
+          pattern: Mailspring-*
 
       - name: Zip all directories in artifacts
         run: |
