--- a/.github/workflows/release-all.yaml
+++ b/.github/workflows/release-all.yaml
@@ -3,11 +3,17 @@ name: Build and Release All
 on:
   workflow_dispatch:
   push:
+    branches:
+        - master
+        - 'ci-*'
+        - 'stable*'
     tags:
-      - 'v*.*.*'
-
-permissions:
-  contents: write
+      - 'v*'
+  pull_request:
+    branches:
+      - master
+      - 'ci-*'
+      - 'stable*'
 
 jobs:
   build-linux:
@@ -118,7 +124,11 @@ jobs:
 
   release:
     needs: [build-linux, build-windows, build-macos]
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
