--- a/.github/workflows/release-all.yaml
+++ b/.github/workflows/release-all.yaml
@@ -154,25 +154,7 @@ jobs:
           else
             echo "No artifacts found, please make sure all build workflows have completed and uploaded artifacts."
           fi
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Assets
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [ -d artifacts ]; then
-            for file in $(find artifacts -type f); do
-              echo "Uploading $file"
-              gh release upload "${{ github.ref_name }}" "$file"
-            done
-          else
-            echo "No artifacts found, skipping upload."
-          fi 
+          files: artifacts/**/* 
