--- a/.github/workflows/release-all.yaml
+++ b/.github/workflows/release-all.yaml
@@ -145,7 +145,28 @@ jobs:
           else
             echo "No artifacts found, please make sure all build workflows have completed and uploaded artifacts."
           fi
+      - name: Prepare release assets
+        run: |
+          VERSION="${GITHUB_REF_NAME#v}"
+
+          # Windows
+          cp artifacts/Mailspring-Windows-Exe/Mailspring.exe mailspring-${VERSION}-windows.exe
+
+          # Linux
+          cp artifacts/Mailspring-Linux-x64/mailspring-linux-x64.tar.gz mailspring-${VERSION}-linux-x64.tar.gz
+          cp artifacts/Mailspring-Linux-RPM/mailspring-*.rpm mailspring-${VERSION}.rpm
+          cp artifacts/Mailspring-Linux-DEB/mailspring-*.deb mailspring-${VERSION}.deb
+
+          # macOS
+          cp artifacts/Mailspring-macos-latest/Mailspring-AppleSilicon.zip mailspring-${VERSION}-macos-AppleSilicon.zip
+          cp artifacts/Mailspring-macos-13/Mailspring.zip mailspring-${VERSION}-macos-Intel.zip
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/**/* 
+          files: |
+            mailspring-*-windows.exe
+            mailspring-*-linux-x64.tar.gz
+            mailspring-*.rpm
+            mailspring-*.deb
+            mailspring-*-macos-AppleSilicon.zip
+            mailspring-*-macos-Intel.zip 
